<resources>
    <string name="app_name">GuideView</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="password">密码：</string>
    <string name="name">账号：</string>
    <string name="savePass">记住密码</string>
    <string name="autoLogin">自动登录</string>
    <string name="Login">登录</string>
    <string name="backLogin">退出登录</string>
</resources>
